Solving the exercises